翻譯尋寶密碼、小販、地圖

--- a/translation/CurrentLanguage/Game.csv
+++ b/translation/CurrentLanguage/Game.csv
@@ -2462,13 +2462,13 @@ Combine with other Gift Boxes in Transmutation to get better items",Lua/Item.lua
 1313,194283,Serial number,Lua/LocalizationTexts.lua(00046),,,,,,Serial number,Serial number,序號,,OK,,
 1314,194283,Change password,Lua/LocalizationTexts.lua(00047),,,,,,Change password,Change password,變更密碼,,OK,,
 3953,195716,Error (Invalid Code),Lua/LocalizationTexts.lua(00051),,,,,,,,錯誤（無效密碼）,,OK,,
-3954,195716,Invalid Treasure Key. Please make sure that you have entered the code correctly.,Lua/LocalizationTexts.lua(00052),,,,,,,,無效的尋寶密碼。請確保你已經輸入正確的密碼。,,OK,,
+3954,195716,Invalid Treasure Key. Please make sure that you have entered the code correctly.,Lua/LocalizationTexts.lua(00052),,,,,,,,無效的尋寶密碼。請確保你輸入的密碼正確。,,OK,,
 3955,195716,Error (Time Limit),Lua/LocalizationTexts.lua(00053),,,,,,,,錯誤（時間限制）,,OK,,
 3956,195716,Unable to redeem code. The Treasure Key has expired.,Lua/LocalizationTexts.lua(00054),,,,,,,,無法兌換密碼。尋寶密碼已過期。,,OK,,
 3957,195716,Error (Use Limit),Lua/LocalizationTexts.lua(00055),,,,,,,,錯誤（使用上限）,,OK,,
 3958,195716,Unable to redeem code. Treasure Key use limit has been reached.,Lua/LocalizationTexts.lua(00056),,,,,,,,無法兌換密碼。尋寶密碼已達使用上限。,,OK,,
 3959,195716,Error (Already Used),Lua/LocalizationTexts.lua(00057),,,,,,,,錯誤（已經使用）,,OK,,
-3960,195716,Unable to redeem code. Your account has already redeemed this Treasure Key.,Lua/LocalizationTexts.lua(00058),,,,,,,,無法兌換密碼。你的帳號已經兌換過這個尋寶密碼。,,OK,,
+3960,195716,Unable to redeem code. Your account has already redeemed this Treasure Key.,Lua/LocalizationTexts.lua(00058),,,,,,,,無法兌換密碼。你的帳號已兌換過這個尋寶密碼。,,OK,,
 3961,195716,Error (General),Lua/LocalizationTexts.lua(00059),,,,,,,,錯誤,,OK,,
 3496,194585,Victor Vran,Lua/LocalizationTexts.lua(00074),,,,,,Victor Vran,Victor Vran,《獵魔奇俠》,,OK,,
 4594,198927,Victor Vran Platinum trophy,Lua/LocalizationTexts.lua(00079),,,,,,,,《獵魔奇俠》白金獎盃,,OK,,
@@ -2482,7 +2482,7 @@ Combine with other Gift Boxes in Transmutation to get better items",Lua/Item.lua
 4192,196416,PvP Arena - The Freakshow,Lua/LocalizationTexts.lua(00101),,,,,,,,競技場 - 畸形秀,,OK,,
 4193,196416,Step right up! Enter the Freakshow Arena where you may resolve who is the top hunter - by a fight to the bitter end! You may now enter the Freakshow PvP Arena to duel your fellow hunters through the world map.,Lua/LocalizationTexts.lua(00102),,,,,,,,狂歡吧！進入畸形秀競技場，在這裡你可以證明誰才是頂尖獵人──就看誰能血戰到底！你也可以進入畸形秀玩家競技場，與陪你走遍世界各地的伙伴一決高下。,,OK,,
 4194,196416,Endless Battleground - Bottomless Pit,Lua/LocalizationTexts.lua(00106),,,,,,,,無盡戰場 - 無底洞,,OK,,
-4195,196416,The way down the Bottomless Pit has now been revealed to you - a loathsome journey into an unknown void consisting of demon infested arenas. No one knows the true origin and purpose of this ethereal place. Find it on the world map.,Lua/LocalizationTexts.lua(00107),,,,,,,,無底洞的入口現在對你開放──這是一段進入未知虛空的討厭旅程，那裡是由群魔盤踞的競技場所構成。沒有人知道這個地方的起源和建造目的。你可以在世界地圖上找到它。,,OK,,
+4195,196416,The way down the Bottomless Pit has now been revealed to you - a loathsome journey into an unknown void consisting of demon infested arenas. No one knows the true origin and purpose of this ethereal place. Find it on the world map.,Lua/LocalizationTexts.lua(00107),,,,,,,,無底洞的入口現在已向你開放──那裡是由群魔盤踞的競技場所構成的未知虛空，是一段令人厭惡的旅程。沒有人知道這個地方的起源和建造目的。你可以在世界地圖上找到它。,,OK,,
 4196,196416,Gift Box,Lua/LocalizationTexts.lua(00111),,,,,,,,禮物箱,,OK,,
 4198,196416,Gift Boxes offer better drops and higher chances to gain legendary items,Lua/LocalizationTexts.lua(00112),,,,,,,,禮物箱有更好的寶物，還有更高的機會獲得傳奇物品。,,OK,,
 4271,197475,Favorite,Lua/LocalizationTexts.lua(00120),,,,,,,,最愛,,OK,,
@@ -4363,33 +4363,33 @@ Check your Codex to see the standard recipes. Some recipes are secret and will n
 3584,196015,Recipes,Lua/UI/TransmutationDlg.lua(01287),,,,,,View Codex,View Codex,配方,,OK,,
 4172,196097,Transmute,Lua/UI/TransmutationDlg.lua(01295),,,,,,,,合成,,OK,,
 3585,194913,Equipment,Lua/UI/TransmutationDlg.lua(01736),,,,,,,,裝備,,OK,,
-3615,194959,Login,Lua/UI/TreasureKeyHandler.lua(00040),,,,,,,,Login,,OK,,
-4139,196097,You need to go online to redeem a Treasure Key,Lua/UI/TreasureKeyHandler.lua(00040),,,,,,,,You need to go online to redeem a Treasure Key,,OK,,
-4140,196097,Redeem a treasure key,Lua/UI/TreasureKeyHandler.lua(00075),,,,,,,,Redeem a treasure key,,OK,,
-4141,196097,Do you want to redeem the treasure key <key> for this character?,Lua/UI/TreasureKeyHandler.lua(00078),,,,,,,,Do you want to redeem the treasure key <key> for this character?,,OK,,
-4142,196097,You have successfully redeemed the treasure key <key>,Lua/UI/TreasureKeyHandler.lua(00084),,,,,,,,You have successfully redeemed the treasure key <key>,,OK,,
-4143,196097,Invalid treasure key. Please make sure that you have entered the key correctly.,Lua/UI/TreasureKeyHandler.lua(00086),,,,,,,,Invalid treasure key. Please make sure that you have entered the key correctly.,,OK,,
-4144,196097,Unable to redeem treasure key. The key has expired.,Lua/UI/TreasureKeyHandler.lua(00088),,,,,,,,Unable to redeem treasure key. The key has expired.,,OK,,
-4145,196097,Unable to redeem treasure key. User limit has been reached.,Lua/UI/TreasureKeyHandler.lua(00090),,,,,,,,Unable to redeem treasure key. User limit has been reached.,,OK,,
-4146,196097,Unable to redeem treasure key. Your account has already redeemed this key.,Lua/UI/TreasureKeyHandler.lua(00092),,,,,,,,Unable to redeem treasure key. Your account has already redeemed this key.,,OK,,
-4604,199130,You need to update your game to redeem this treasure key.,Lua/UI/TreasureKeyHandler.lua(00095),,,,,,,,You need to update your game to redeem this treasure key.,,OK,,
-4605,199130,You need the <DLCName> DLC to redeem this treasure key.,Lua/UI/TreasureKeyHandler.lua(00098),,,,,,,,You need the <DLCName> DLC to redeem this treasure key.,,OK,,
-3962,195716,Unable to redeem Treasure Key. Error code: <error>,Lua/UI/TreasureKeyHandler.lua(00100),,,,,,,,Unable to redeem Treasure Key. Error code: <error>,,OK,,
-4017,195716,Menu,Lua/UI/Vendor.lua(00503),,,,,,,,Menu,,OK,,
-1526,194283,Vendor,Lua/UI/Vendor.lua(00515),,,,,,Vendor,Vendor,,,OK,,
-1527,194283,Victor Vran,Lua/UI/Vendor.lua(00522),,,,,,Victor Vran,Victor Vran,,,OK,,
-1528,194283,Close,Lua/UI/Vendor.lua(00529),,,,,,Close,Close,,,OK,,
-1529,194283,Switch sides,Lua/UI/Vendor.lua(00541),,,,,,Switch sides,Switch sides,,,OK,,
-1530,194283,Switch sides,Lua/UI/Vendor.lua(00549),,,,,,Switch sides,Switch sides,,,OK,,
-1531,194814,Buyback,Lua/UI/Vendor.lua(00584),,,,,,BuyBack,BuyBack,Buyback,,OK,,
-1532,194283,<completed>/<total>,Lua/UI/WorldMap.lua(00071),,,,,,<completed>/<total>,<completed>/<total>,,,OK,,
-3880,195189,Select,Lua/UI/WorldMap.lua(00091),,,,,,,,Select,,OK,,
-3881,195189,Pan camera,Lua/UI/WorldMap.lua(00099),,,,,,,,Pan camera,,OK,,
-3882,195189,Challenges,Lua/UI/WorldMap.lua(00109),,,,,,,,Challenges,,OK,,
-1265,194283,Close,Lua/UI/WorldMap.lua(00131),,,,,,Close,Close,,,OK,,
-1263,195189,Elite Challenges,Lua/UI/WorldMap.lua(00523),,,,,,Close,Close,Elite Challenges,,OK,,
-4205,196416,Elite Challenges are now available! Each area now has 5 new challenges to test your skills against greater odds. You can view these challenges from the map screen.,Lua/UI/WorldMap.lua(00524),,,,,,,,Elite Challenges are now available! Each area now has 5 new challenges to test your skills against greater odds. You can view these challenges from the map screen.,,OK,,
-3508,194585,Achievements,Lua/UIDesignerData/Achievements.lua(00151),,default,,,,Achievements,Achievements,,,OK,,
+3615,194959,Login,Lua/UI/TreasureKeyHandler.lua(00040),,,,,,,,登入,,OK,,
+4139,196097,You need to go online to redeem a Treasure Key,Lua/UI/TreasureKeyHandler.lua(00040),,,,,,,,你必須連線才能兌換尋寶密碼,,OK,,
+4140,196097,Redeem a treasure key,Lua/UI/TreasureKeyHandler.lua(00075),,,,,,,,兌換尋寶密碼,,OK,,
+4141,196097,Do you want to redeem the treasure key <key> for this character?,Lua/UI/TreasureKeyHandler.lua(00078),,,,,,,,你是否要用這個角色兌換尋寶密碼<key>？,,OK,,
+4142,196097,You have successfully redeemed the treasure key <key>,Lua/UI/TreasureKeyHandler.lua(00084),,,,,,,,你已成功兌換尋寶密碼<key>。,,OK,,
+4143,196097,Invalid treasure key. Please make sure that you have entered the key correctly.,Lua/UI/TreasureKeyHandler.lua(00086),,,,,,,,無效的尋寶密碼。請確保你輸入的密碼正確。,,OK,,
+4144,196097,Unable to redeem treasure key. The key has expired.,Lua/UI/TreasureKeyHandler.lua(00088),,,,,,,,無法兌換尋寶密碼。密碼已過期。,,OK,,
+4145,196097,Unable to redeem treasure key. User limit has been reached.,Lua/UI/TreasureKeyHandler.lua(00090),,,,,,,,無法兌換尋寶密碼。密碼已達使用上限。,,OK,,
+4146,196097,Unable to redeem treasure key. Your account has already redeemed this key.,Lua/UI/TreasureKeyHandler.lua(00092),,,,,,,,無法兌換尋寶密碼。你的帳號已兌換過這個密碼。,,OK,,
+4604,199130,You need to update your game to redeem this treasure key.,Lua/UI/TreasureKeyHandler.lua(00095),,,,,,,,你需要更新遊戲才能兌換這個尋寶密碼。,,OK,,
+4605,199130,You need the <DLCName> DLC to redeem this treasure key.,Lua/UI/TreasureKeyHandler.lua(00098),,,,,,,,你需要附加下載內容<DLCName>才能兌換這個尋寶密碼。,,OK,,
+3962,195716,Unable to redeem Treasure Key. Error code: <error>,Lua/UI/TreasureKeyHandler.lua(00100),,,,,,,,無法兌換尋寶密碼。錯誤代碼：<error>,,OK,,
+4017,195716,Menu,Lua/UI/Vendor.lua(00503),,,,,,,,選單,,OK,,
+1526,194283,Vendor,Lua/UI/Vendor.lua(00515),,,,,,Vendor,Vendor,小販,,OK,,
+1527,194283,Victor Vran,Lua/UI/Vendor.lua(00522),,,,,,Victor Vran,Victor Vran,維克多．弗蘭,,OK,,
+1528,194283,Close,Lua/UI/Vendor.lua(00529),,,,,,Close,Close,關閉,,OK,,
+1529,194283,Switch sides,Lua/UI/Vendor.lua(00541),,,,,,Switch sides,Switch sides,切換到左側,,OK,,
+1530,194283,Switch sides,Lua/UI/Vendor.lua(00549),,,,,,Switch sides,Switch sides,切換到右側,,OK,,
+1531,194814,Buyback,Lua/UI/Vendor.lua(00584),,,,,,BuyBack,BuyBack,買回,,OK,,
+1532,194283,<completed>/<total>,Lua/UI/WorldMap.lua(00071),,,,,,<completed>/<total>,<completed>/<total>,<completed>/<total>,,OK,,
+3880,195189,Select,Lua/UI/WorldMap.lua(00091),,,,,,,,選擇,,OK,,
+3881,195189,Pan camera,Lua/UI/WorldMap.lua(00099),,,,,,,,平移鏡頭,,OK,,
+3882,195189,Challenges,Lua/UI/WorldMap.lua(00109),,,,,,,,挑戰,,OK,,
+1265,194283,Close,Lua/UI/WorldMap.lua(00131),,,,,,Close,Close,關閉,,OK,,
+1263,195189,Elite Challenges,Lua/UI/WorldMap.lua(00523),,,,,,Close,Close,精英挑戰,,OK,,
+4205,196416,Elite Challenges are now available! Each area now has 5 new challenges to test your skills against greater odds. You can view these challenges from the map screen.,Lua/UI/WorldMap.lua(00524),,,,,,,,精英挑戰已開放！現在每個區域都有5個新挑戰可供你挑戰極限。你可以從地圖介面查看這些挑戰。,,OK,,
+3508,194585,Achievements,Lua/UIDesignerData/Achievements.lua(00151),,default,,,,Achievements,Achievements,成就,,OK,,
 1535,194283,Game,Lua/UIDesignerData/Chat.lua(00055),,extend,,,,Game,Game,,,OK,,
 1536,194283,Room,Lua/UIDesignerData/Chat.lua(00070),,extend,,,,Room,Room,,,OK,,
 1537,197294,Feedback,Lua/UIDesignerData/EABugReportDlg.lua(00057),,default,,,,Bug Report,Bug Report,Feedback,,OK,,
