翻譯回報介面、手把操作說明

--- a/translation/CurrentLanguage/Game.csv
+++ b/translation/CurrentLanguage/Game.csv
@@ -869,7 +869,7 @@ Returning to the HUB or exiting the game resets checkpoints, monsters and challe
 
 Returning to the HUB or exiting the game resets checkpoints, monsters and challenges in progress.","Checkpoints preserve your progress for the current play session. If you die, you will be able to revive at the last activated checkpoint or at the start of the zone if you haven't activated a Checkpoint yet.
 
-Returning to the HUB or exiting the game resets checkpoints, monsters and challenges in progress.","紀錄點可以儲存你目前的遊戲進度。如果你死了，你可以在最後啟動的紀錄點復活；如果你尚未啟動紀錄點，你可以在區域入口處復活。
+Returning to the HUB or exiting the game resets checkpoints, monsters and challenges in progress.","紀錄點可以儲存你目前的遊戲進度。如果你死了，你可以在最後啟動的紀錄點重生；如果你尚未啟動紀錄點，你可以在區域入口處重生。
 
 返回主選單或離開遊戲會重置進度中的紀錄點、怪物和挑戰。",,OK,,
 2163,194283,Item Stats,Data/CodexEntry.lua(00080),,CodexEntry Hint_ItemStats DisplayName,,,,Item Stats,Item Stats,物品數據,,OK,,
@@ -1869,7 +1869,7 @@ Only one Power Stone can be used per transmutation.",Data/CodexEntry.lua(00221),
 120,194283,Checkpoint,Lua/Checkpoint.lua(00015),,,,,,Checkpoint,Checkpoint,紀錄點,,OK,,
 121,194283,Checkpoint Activated,Lua/Checkpoint.lua(00052),,,,,,Checkpoint Activated,Checkpoint Activated,紀錄點已啟動,,OK,,
 122,194283,<control> - View,Lua/Codex.lua(00056),,,,,,<control> - View,<control> - View,<control> - 查看,,OK,,
-123,194283,New Codex Entry: <title><control_hint>,Lua/Codex.lua(00057),,,,,,New Codex Entry: <title><control_hint>,New Codex Entry: <title><control_hint>,新百科條目：<title><control_hint>,,OK,,
+123,194283,New Codex Entry: <title><control_hint>,Lua/Codex.lua(00057),,,,,,New Codex Entry: <title><control_hint>,New Codex Entry: <title><control_hint>,新百科紀錄：<title><control_hint>,,OK,,
 124,194283,Equip a Potion or Bomb here,Lua/Consumable.lua(00009),,,,,,Equip a Potion or Bomb here,Equip a Potion or Bomb here,在此裝備藥劑或炸彈,,OK,,
 125,194283,Immune!,Lua/Damage.lua(00099),,,,,,Immune!,Immune!,免疫！,,OK,,
 126,194283,Blocked!,Lua/Damage.lua(00104),,,,,,Blocked!,Blocked!,格擋！,,OK,,
@@ -3830,7 +3830,7 @@ Note: Playing in Hard Mode is not recommended for your first character.","如果
 1183,194283,Close,Lua/UI/Conversation.lua(00033),,,,,,Close,Close,關閉,,OK,,
 1551,194283,Skip,Lua/UI/Conversation.lua(00041),,default,,,,Skip,Skip,跳過,,OK,,
 28838,194913,"[ph] close, exit, back: ",Lua/UI/Credits.lua(00039),,,,,,,,[ph]關閉，離開，返回：,,OK,,
-1195,194283,E-mail (optional),Lua/UI/FeedBack.lua(00083),,,,,,E-mail (optional),E-mail (optional),電子郵件（可選）,,OK,,
+1195,194283,E-mail (optional),Lua/UI/FeedBack.lua(00083),,,,,,E-mail (optional),E-mail (optional),電子郵件（可不填）,,OK,,
 1197,194283,Combat time: <number1>.<number2> s,Lua/UI/HeadsUpDisplay.lua(00297),,,,,,Combat time: <number1>.<number2> s,Combat time: <number1>.<number2> s,戰鬥時間：<number1>.<number2>秒,,OK,,
 1198,194283,DPS (last sec): <number1>,Lua/UI/HeadsUpDisplay.lua(00298),,,,,,DPS (last sec): <number1>,DPS (last sec): <number1>,每秒傷害（關鍵）：<number1>,,OK,,
 1199,194283,DPS (average): <number1>,Lua/UI/HeadsUpDisplay.lua(00299),,,,,,DPS (average): <number1>,DPS (average): <number1>,每秒傷害（平均）：<number1>,,OK,,
@@ -4211,8 +4211,8 @@ Code ""<err>""","抱歉，伺服器回傳一個錯誤。
 1457,194283,Display Critical Text,Lua/UI/Options.lua(01889),,options dialog tooltip,,,,Display Critical Text,Display Critical Text,顯示暴擊文字,,OK,,
 1458,194283,Display Conditions,Lua/UI/Options.lua(01892),,,,,,Display Conditions,Display Conditions,顯示狀態,,OK,,
 1459,194283,Display Conditions,Lua/UI/Options.lua(01892),,options dialog tooltip,,,,Display Conditions,Display Conditions,顯示狀態,,OK,,
-3930,195390,Display Codex Entries,Lua/UI/Options.lua(01895),,,,,,,,顯示百科條目,,OK,,
-3931,195390,Display Codex Entries,Lua/UI/Options.lua(01895),,options dialog tooltip,,,,,,顯示百科條目,,OK,,
+3930,195390,Display Codex Entries,Lua/UI/Options.lua(01895),,,,,,,,顯示百科紀錄,,OK,,
+3931,195390,Display Codex Entries,Lua/UI/Options.lua(01895),,options dialog tooltip,,,,,,顯示百科紀錄,,OK,,
 1460,194283,Show Quest Messages,Lua/UI/Options.lua(01898),,,,,,Show Quest Messages,Show Quest Messages,顯示任務訊息,,OK,,
 1461,194283,Show Quest Messages,Lua/UI/Options.lua(01898),,options dialog tooltip,,,,Show Quest Messages,Show Quest Messages,顯示任務訊息,,OK,,
 1462,194283,Show Notifications,Lua/UI/Options.lua(01901),,,,,,Show Notifications,Show Notifications,顯示通知,,OK,,
@@ -4390,49 +4390,49 @@ Check your Codex to see the standard recipes. Some recipes are secret and will n
 1263,195189,Elite Challenges,Lua/UI/WorldMap.lua(00523),,,,,,Close,Close,精英挑戰,,OK,,
 4205,196416,Elite Challenges are now available! Each area now has 5 new challenges to test your skills against greater odds. You can view these challenges from the map screen.,Lua/UI/WorldMap.lua(00524),,,,,,,,精英挑戰已開放！現在每個區域都有5個新挑戰可供你挑戰極限。你可以從地圖介面查看這些挑戰。,,OK,,
 3508,194585,Achievements,Lua/UIDesignerData/Achievements.lua(00151),,default,,,,Achievements,Achievements,成就,,OK,,
-1535,194283,Game,Lua/UIDesignerData/Chat.lua(00055),,extend,,,,Game,Game,,,OK,,
-1536,194283,Room,Lua/UIDesignerData/Chat.lua(00070),,extend,,,,Room,Room,,,OK,,
-1537,197294,Feedback,Lua/UIDesignerData/EABugReportDlg.lua(00057),,default,,,,Bug Report,Bug Report,Feedback,,OK,,
-1538,194283,Summary:,Lua/UIDesignerData/EABugReportDlg.lua(00095),,default,,,,Summary:,Summary:,,,OK,,
-1539,194283,Description:,Lua/UIDesignerData/EABugReportDlg.lua(00116),,default,,,,Description:,Description:,,,OK,,
-1540,194283,"Click to draw, right-click to clear",Lua/UIDesignerData/EABugReportDlg.lua(00143),,default,,,,"Click to draw, right-click to clear","Click to draw, right-click to clear",,,OK,,
-1541,194283,Cancel,Lua/UIDesignerData/EABugReportDlg.lua(00156),,default,,,,Cancel,Cancel,,,OK,,
-1542,194283,OK,Lua/UIDesignerData/EABugReportDlg.lua(00170),,default,,,,OK,OK,,,OK,,
-1543,197294,May we contact you for further info? Enter your email address here:,Lua/UIDesignerData/EABugReportDlg.lua(00186),,default,,,,May we contact you for further info about that bug report? Enter your email address here:,May we contact you for further info about that bug report? Enter your email address here:,May we contact you for further info? Enter your email address here:,,OK,,
-1549,194283,Thank you for the feedback,Lua/UIDesignerData/FeedBack.lua(00037),,thanks,,,,Thank you for the feedback,Thank you for the feedback,,,OK,,
-1552,194283,Complete!,Lua/UIDesignerData/HeadsUpDisplay.lua(00764),,Hero_Common,,,,Complete!,Complete!,,,OK,,
-1553,194283,New!,Lua/UIDesignerData/HeadsUpDisplay.lua(00783),,Hero_Common,,,,New!,New!,,,OK,,
-1554,194283,Return to Hub,Lua/UIDesignerData/HeroDeathDlg.lua(00053),,default,,,,Return to Hub,Return to Hub,,,OK,,
-1555,194283,Respawn,Lua/UIDesignerData/HeroDeathDlg.lua(00085),,default,,,,Respawn,Respawn,,,OK,,
-1556,194283,You have been defeated.,Lua/UIDesignerData/HeroDeathDlg.lua(00102),,default,,,,You have been defeated.,You have been defeated.,,,OK,,
-1557,194283,<current_page> / <total_pages>,Lua/UIDesignerData/Inventory.lua(00109),,inventory,,,,<current_page> / <total_pages>,<current_page> / <total_pages>,,,OK,,
-1558,194283,9999999,Lua/UIDesignerData/Inventory.lua(00181),,default_up,,,,9999999,9999999,,,OK,,
-4116,195942,Special Attack 1,Lua/UIDesignerData/Inventory.lua(00538),,layoutsub,,,,,,Special Attack 1,,OK,,
-4117,195942,Switch Active Weapon,Lua/UIDesignerData/Inventory.lua(00552),,layoutsub,,,,,,Switch Active Weapon,,OK,,
-4118,195942,Basic Attack,Lua/UIDesignerData/Inventory.lua(00566),,layoutsub,,,,,,Basic Attack,,OK,,
-4119,195942,Special Attack 2,Lua/UIDesignerData/Inventory.lua(00580),,layoutsub,,,,,,Special Attack 2,,OK,,
-4120,195942,Jump/Interact,Lua/UIDesignerData/Inventory.lua(00594),,layoutsub,,,,,,Jump/Interact,,OK,,
-4121,195942,Open Main Menu,Lua/UIDesignerData/Inventory.lua(00608),,layoutsub,,,,,,Open Main Menu,,OK,,
-4122,195942,"Rotate Camera, (tap) Map",Lua/UIDesignerData/Inventory.lua(00622),,layoutsub,,,,,,"Rotate Camera, (tap) Map",,OK,,
-4123,195942, (Left) - Use Consumable 1<newline>(Right) - Use Consumable 2 ,Lua/UIDesignerData/Inventory.lua(00636),,layoutsub,,,,,, (Left) - Use Consumable 1<newline>(Right) - Use Consumable 2 ,,OK,,
-4124,195942,Open Inventory,Lua/UIDesignerData/Inventory.lua(00650),,layoutsub,,,,,,Open Inventory,,OK,,
-4125,195942,Move,Lua/UIDesignerData/Inventory.lua(00664),,layoutsub,,,,,,Move,,OK,,
-4126,195942,Dodge (while moving),Lua/UIDesignerData/Inventory.lua(00678),,layoutsub,,,,,,Dodge (while moving),,OK,,
-4127,196259,Cast Demon Power 1,Lua/UIDesignerData/Inventory.lua(00692),,layoutsub,,,,Cast Demon Rune 1,Cast Demon Rune 1,Cast Demon Power 1,,OK,,
-4128,196259,Cast Demon Power 2,Lua/UIDesignerData/Inventory.lua(00706),,layoutsub,,,,Cast Demon Rune 2,Cast Demon Rune 2,Cast Demon Power 2,,OK,,
-1560,194283,News,Lua/UIDesignerData/Inventory.lua(03412),,news,,,,News,News,,,OK,,
-3586,195189,Information,Lua/UIDesignerData/Inventory.lua(03591),,transmute,,,,,,Information,,OK,,
-3587,194913,Transmute,Lua/UIDesignerData/Inventory.lua(03705),,transmute_center,,,,,,Transmute,,OK,,
-3588,194913,Transmute (1000 Gold),Lua/UIDesignerData/Inventory.lua(03753),,transmute_center,,,,,,Transmute (1000 Gold),,OK,,
-1561,194283,Requirements,Lua/UIDesignerData/ItemPresets.lua(00367),,ItemInfoRequirements,,,,Requirements,Requirements,,,OK,,
-1562,194283,Requirements,Lua/UIDesignerData/ItemPresets.lua(00984),,InventoryWeaponItemAPRequirements,,,,Requirements,Requirements,,,OK,,
-1564,194283,Connecting...,Lua/UIDesignerData/MenuOnline.lua(00241),,in_game_logging_in,,,,Connecting...,Connecting...,,,OK,,
-3643,194959,Connecting...,Lua/UIDesignerData/MenuOnline.lua(00259),,pre_game_logging_in,,,,,,Connecting...,,OK,,
-4636,199653,Loading...,Lua/UIDesignerData/PreGame.lua(00151),,mainmenu,,,0,,,,,new,,
-1565,194283,Hunters world,Lua/UIDesignerData/PreGame.lua(00401),,world,,,,Hunters world,Hunters world,,,OK,,
-1566,194283,News,Lua/UIDesignerData/PropertyListTemplate.lua(00028),,section,,,,News,News,,,OK,,
-3685,195030,News,Lua/UIDesignerData/PropertyListTemplate.lua(00072),,textline,,,,,,News,,OK,,
-3686,195030,News,Lua/UIDesignerData/PropertyListTemplate.lua(00087),,prop,,,,,,News,,OK,,
+1535,194283,Game,Lua/UIDesignerData/Chat.lua(00055),,extend,,,,Game,Game,遊戲,,OK,,
+1536,194283,Room,Lua/UIDesignerData/Chat.lua(00070),,extend,,,,Room,Room,房間,,OK,,
+1537,197294,Feedback,Lua/UIDesignerData/EABugReportDlg.lua(00057),,default,,,,Bug Report,Bug Report,回報,,OK,,
+1538,194283,Summary:,Lua/UIDesignerData/EABugReportDlg.lua(00095),,default,,,,Summary:,Summary:,概要：,,OK,,
+1539,194283,Description:,Lua/UIDesignerData/EABugReportDlg.lua(00116),,default,,,,Description:,Description:,描述：,,OK,,
+1540,194283,"Click to draw, right-click to clear",Lua/UIDesignerData/EABugReportDlg.lua(00143),,default,,,,"Click to draw, right-click to clear","Click to draw, right-click to clear",滑鼠左鍵畫圖，滑鼠右鍵清除,,OK,,
+1541,194283,Cancel,Lua/UIDesignerData/EABugReportDlg.lua(00156),,default,,,,Cancel,Cancel,取消,,OK,,
+1542,194283,OK,Lua/UIDesignerData/EABugReportDlg.lua(00170),,default,,,,OK,OK,確定,,OK,,
+1543,197294,May we contact you for further info? Enter your email address here:,Lua/UIDesignerData/EABugReportDlg.lua(00186),,default,,,,May we contact you for further info about that bug report? Enter your email address here:,May we contact you for further info about that bug report? Enter your email address here:,我們可以聯繫您，取得進一步資訊嗎？在此輸入您的電子郵件地址：,,OK,,
+1549,194283,Thank you for the feedback,Lua/UIDesignerData/FeedBack.lua(00037),,thanks,,,,Thank you for the feedback,Thank you for the feedback,感謝您的回報,,OK,,
+1552,194283,Complete!,Lua/UIDesignerData/HeadsUpDisplay.lua(00764),,Hero_Common,,,,Complete!,Complete!,完成！,,OK,,
+1553,194283,New!,Lua/UIDesignerData/HeadsUpDisplay.lua(00783),,Hero_Common,,,,New!,New!,新！,,OK,,
+1554,194283,Return to Hub,Lua/UIDesignerData/HeroDeathDlg.lua(00053),,default,,,,Return to Hub,Return to Hub,返回總部,,OK,,
+1555,194283,Respawn,Lua/UIDesignerData/HeroDeathDlg.lua(00085),,default,,,,Respawn,Respawn,重生,,OK,,
+1556,194283,You have been defeated.,Lua/UIDesignerData/HeroDeathDlg.lua(00102),,default,,,,You have been defeated.,You have been defeated.,你被擊敗了。,,OK,,
+1557,194283,<current_page> / <total_pages>,Lua/UIDesignerData/Inventory.lua(00109),,inventory,,,,<current_page> / <total_pages>,<current_page> / <total_pages>,<current_page>/<total_pages>,,OK,,
+1558,194283,9999999,Lua/UIDesignerData/Inventory.lua(00181),,default_up,,,,9999999,9999999,9999999,,OK,,
+4116,195942,Special Attack 1,Lua/UIDesignerData/Inventory.lua(00538),,layoutsub,,,,,,特殊攻擊1,,OK,,
+4117,195942,Switch Active Weapon,Lua/UIDesignerData/Inventory.lua(00552),,layoutsub,,,,,,切換武器,,OK,,
+4118,195942,Basic Attack,Lua/UIDesignerData/Inventory.lua(00566),,layoutsub,,,,,,基本攻擊,,OK,,
+4119,195942,Special Attack 2,Lua/UIDesignerData/Inventory.lua(00580),,layoutsub,,,,,,特殊攻擊2,,OK,,
+4120,195942,Jump/Interact,Lua/UIDesignerData/Inventory.lua(00594),,layoutsub,,,,,,跳躍/互動,,OK,,
+4121,195942,Open Main Menu,Lua/UIDesignerData/Inventory.lua(00608),,layoutsub,,,,,,打開主選單,,OK,,
+4122,195942,"Rotate Camera, (tap) Map",Lua/UIDesignerData/Inventory.lua(00622),,layoutsub,,,,,,旋轉鏡頭，（輕按）地圖,,OK,,
+4123,195942, (Left) - Use Consumable 1<newline>(Right) - Use Consumable 2 ,Lua/UIDesignerData/Inventory.lua(00636),,layoutsub,,,,,,（左）使用消耗品1<newline>（右）使用消耗品2,,OK,,
+4124,195942,Open Inventory,Lua/UIDesignerData/Inventory.lua(00650),,layoutsub,,,,,,打開物品欄,,OK,,
+4125,195942,Move,Lua/UIDesignerData/Inventory.lua(00664),,layoutsub,,,,,,移動,,OK,,
+4126,195942,Dodge (while moving),Lua/UIDesignerData/Inventory.lua(00678),,layoutsub,,,,,,翻滾（移動時）,,OK,,
+4127,196259,Cast Demon Power 1,Lua/UIDesignerData/Inventory.lua(00692),,layoutsub,,,,Cast Demon Rune 1,Cast Demon Rune 1,施展惡魔之力1,,OK,,
+4128,196259,Cast Demon Power 2,Lua/UIDesignerData/Inventory.lua(00706),,layoutsub,,,,Cast Demon Rune 2,Cast Demon Rune 2,施展惡魔之力2,,OK,,
+1560,194283,News,Lua/UIDesignerData/Inventory.lua(03412),,news,,,,News,News,新消息,,OK,,
+3586,195189,Information,Lua/UIDesignerData/Inventory.lua(03591),,transmute,,,,,,資訊,,OK,,
+3587,194913,Transmute,Lua/UIDesignerData/Inventory.lua(03705),,transmute_center,,,,,,合成,,OK,,
+3588,194913,Transmute (1000 Gold),Lua/UIDesignerData/Inventory.lua(03753),,transmute_center,,,,,,合成（1000金幣）,,OK,,
+1561,194283,Requirements,Lua/UIDesignerData/ItemPresets.lua(00367),,ItemInfoRequirements,,,,Requirements,Requirements,需求,,OK,,
+1562,194283,Requirements,Lua/UIDesignerData/ItemPresets.lua(00984),,InventoryWeaponItemAPRequirements,,,,Requirements,Requirements,需求,,OK,,
+1564,194283,Connecting...,Lua/UIDesignerData/MenuOnline.lua(00241),,in_game_logging_in,,,,Connecting...,Connecting...,連線中……,,OK,,
+3643,194959,Connecting...,Lua/UIDesignerData/MenuOnline.lua(00259),,pre_game_logging_in,,,,,,連線中……,,OK,,
+4636,199653,Loading...,Lua/UIDesignerData/PreGame.lua(00151),,mainmenu,,,0,,,載入中……,,new,,
+1565,194283,Hunters world,Lua/UIDesignerData/PreGame.lua(00401),,world,,,,Hunters world,Hunters world,獵人世界,,OK,,
+1566,194283,News,Lua/UIDesignerData/PropertyListTemplate.lua(00028),,section,,,,News,News,新消息,,OK,,
+3685,195030,News,Lua/UIDesignerData/PropertyListTemplate.lua(00072),,textline,,,,,,新消息,,OK,,
+3686,195030,News,Lua/UIDesignerData/PropertyListTemplate.lua(00087),,prop,,,,,,新消息,,OK,,
 1567,194283,Wraith,Lua/Units/BansheeBase.lua(00003),,|gender,,,,Wraith,Wraith,Wraith,M,OK,,
 1568,194283,Wraiths,Lua/Units/BansheeBase.lua(00004),,,,,,Wraiths,Wraiths,,,OK,,
 1572,194283,Apocalypse,Lua/Units/BansheeBoss.lua(00003),,|gender,,,,Apocalypse,Apocalypse,Apocalypse,M,OK,,
